# HoloCubic

./: .gitignore  CMakeLists.txt  README.md  SESSION_RECOVERY.md
.claude/: settings.local.json
doc/: plan.md  spec.md  tasks.md  提示词.md
main/: CMakeLists.txt  app_config.h  app_types.h  idf_component.yml  main.c
main/assets/: font_noto_16.c  font_noto_16.h
main/hal/: hal_audio.c  hal_audio.h  hal_display.c  hal_display.h  hal_imu.c  hal_imu.h  hal_rtc.c  hal_rtc.h  hal_sd.c  hal_sd.h  hal_touch_encoder.c  hal_touch_encoder.h
main/mode/: mode_manager.c  mode_manager.h
main/mode/menu/: animation_board.c  animation_board.h  clock_alarm.c  clock_alarm.h  menu_engine.c  menu_engine.h  menu_ui.c  menu_ui.h  music_player.c  music_player.h  pomodoro.c  pomodoro.h  settings.c  settings.h  test_menu_engine.c  test_menu_ui.c  weather.c  weather.h
main/mode/pet/: pet_anim.c  pet_anim.h  pet_engine.c  pet_engine.h  pet_motion.c  pet_motion.h  pet_shake.c  pet_shake.h  pet_ui.c  pet_ui.h
main/service/: svc_http.c  svc_http.h  svc_sntp.c  svc_sntp.h  svc_wifi.c  svc_wifi.h
scripts/: font_symbols.txt  preview.py  regenerate_font.py  render_frames.py  setup_music.py  video_to_frames.py
